// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`env:list should hide variables values and prompt to show 1`] = `
"Listing environment variables for site: site-name
.------------------------------------------------------------------.
|                      Environment variables                       |
|------------------------------------------------------------------|
|     Key     |                       Value                        |
|-------------|----------------------------------------------------|
| DB_ADMIN    | ************************************************** |
| DB_PASSWORD | ************************************************** |
'------------------------------------------------------------------'
? Show values? (y/N) [21D[21C[2K[G? Show values? No[17D[17C"
`;

exports[`env:list should hide variables values and show on confirm 1`] = `
"Listing environment variables for site: site-name
.------------------------------------------------------------------.
|                      Environment variables                       |
|------------------------------------------------------------------|
|     Key     |                       Value                        |
|-------------|----------------------------------------------------|
| DB_ADMIN    | ************************************************** |
| DB_PASSWORD | ************************************************** |
'------------------------------------------------------------------'
? Show values? (y/N) [21D[21C[2K[G? Show values? (y/N) y[22D[22C[2K[G? Show values? Yes[18D[18C
[2K[1A[2K[1A[2K[G
[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G.---------------------.
| Environment variables |
|---------------------|
|     Key     | Value |
|-------------|-------|
| DB_ADMIN    | admin |
| DB_PASSWORD | 1234  |
'---------------------'
? Show values? Yes"
`;

exports[`env:list should not prompt on CI 1`] = `
"Listing environment variables for site: site-name
.---------------------.
| Environment variables |
|---------------------|
|     Key     | Value |
|-------------|-------|
| DB_ADMIN    | admin |
| DB_PASSWORD | 1234  |
'---------------------'"
`;

exports[`env:migrate should exit if the folder is not linked to a site, and --from is not provided 1`] = `"Please include the source site Id as the \`--from\` option, or run \`netlify link\` to link this folder to a Netlify site"`;

exports[`env:migrate should return success message 1`] = `"Successfully migrated environment variables from site-name to site-name-a"`;

exports[`env:migrate should return without migrate if there's no env in source site 1`] = `"site-name has no environment variables, nothing to migrate"`;
